# berrybasic

./: .gitignore  BerryBasiC Language Reference.md  Makefile  README.md
basic/: CMakeLists.txt  basic.c  basic.h  interp_call.inc  interp_control.inc  interp_data.inc  interp_eval.inc  interp_events.inc  interp_files.inc  interp_graphics.inc  interp_hw.inc  interp_lexer.inc  interp_list.inc  interp_parse.inc  interp_seed.inc  interp_stmt.inc  interp_util.inc  test.cpp  test_console.c
basic/cmake/: CodeCoverage.cmake
boot/: config.txt
doc/: BerryBasiC Language Reference.md  README-realhw.md
drivers/: fat.c  font_data.c  gpio.c  graphics.c  graphics.h  i2c.c  image.c  logo_data.c  sound.c  ttf.c  usb_hid.c  usb_hid.h  usb_kbd.c  usb_kbd.h  xhci.c  xhci.h
examples/: collections.bas  dirlist.bas  dragon.bas  eval.bas  events.bas  fileio.bas  format.bas  funcs.bas  gfxdemo.bas  gfxdepth.bas  gpio.bas  i2cscan.bas  imgload.bas  keyboard.bas  koch.bas  mandel.bas  mathlib.bas  modern.bas  mouse.bas  records.bas  screen.bas  scrtest.bas  seedtest.bas  sierpins.bas  sound.bas  spiro.bas  stars.bas  strings.bas  tree.bas  triangl.bas  ttftext.bas  usemath.bas  vdutest.bas  welcome.bas
graphics/: logo.ppm
host/: console_host.c  gfx_host.c  gpio_host.c  i2c_host.c  image_host.c  main.c  sound_host.c  storage_host.c  ttf_host.c
include/: console.h  gfx.h  gpio.h  i2c.h  image.h  sound.h  storage.h  ttf.h
kernel/: boot.S  buildconfig.h  kernel.c  linker.ld  mailbox.c  mailbox.h  mmu.c  uart.h  util.c
seed/: seed.h  seed.ld  seed_host.c  seed_target.c
seed/examples/: add.c  bgidemo.c  bufsum.c  dynarr.c  filedemo.c  hypot.c  inputlog.c  median.c  paint.c  particle.c  pinblink.c  revstr.c  shout.c  sortarr.c  sumarr.c  upper.c  uprecs.c
seed/include/: ctype.h  graphics.h  stdio.h  stdlib.h  string.h
seed/runtime/: graphics.c  stdio.c  stdlib.c  string.c
src/: basic.c  console.h  fat.c  font.c  font.h  font_data.c  graphics.c  graphics.h  kernel.c  mmu.c  mmu.h  pcie.c  pcie.h  sd.c  sd.h  storage.h  uart.c  usb_hid.c  usb_hid.h  usb_kbd.c  usb_kbd.h  vectors.S  xhci.c
tools/: configure.sh  flashsd.sh  genfont.sh  mksdimage.sh  newseed.sh
